fixed overflow-wrap default causing illegible text

--- a/src/components/AddStudent/index.module.css
+++ b/src/components/AddStudent/index.module.css
@@ -1,6 +1,7 @@
 .Title {
   text-align: center;
   margin-bottom: 3rem;
+  overflow-wrap: normal;
 }
 
 .Container {
