--- a/src/components/layout/PageContainer/index.module.css
+++ b/src/components/layout/PageContainer/index.module.css
@@ -44,7 +44,7 @@
 }
 
 .Sider {
-  z-index: 1001;
+  z-index: 10001;
 }
 
 .Footer {
